<resources>
    <string name="app_name">Placement</string>
    <string name="tv_main_welcome">Bienvenido</string>
    <string name="et_main_name">Nombre</string>
    <string name="et_main_password">Contraseña</string>
    <string name="btn_main_login">Login</string>
    <string name="btn_main_singup">Sign Up</string>
    <string name="iv_main_logo_des">app logo</string>
    <string name="tv_main_forgottenpassword">¿Has olvidado tu contraseña?</string>
    <string name="tv_forgotpassword_welcome">Recuperar contraseña</string>
    <string name="et_forgotpassword_newpassword">Nueva contraseña</string>
    <string name="et_forgotpassword_newpassword2">Repetir nueva contraseña</string>
    <string name="btn_forgotpassword_login">Cambiar contraseña</string>
    <string name="tv_start_welcome">Bienvenido a mi app</string>
</resources>