<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_forgotpassword_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_forgotpassword_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_forgotpassword_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd_forgotpassword_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/iv_forgotpassword_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/iv_main_logo_des"
        android:src="@drawable/ic_action_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gd_forgotpassword_top">

    </ImageView>

    <TextView
        android:id="@+id/tv_forgotpassword_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_forgotpassword_welcome"
        android:textAlignment="center"
        android:textColor="@color/title_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/gd_forgotpassword_end"
        app:layout_constraintStart_toStartOf="@+id/gd_forgotpassword_start"
        app:layout_constraintTop_toBottomOf="@id/iv_forgotpassword_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_forgotpassword_newpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/et_forgotpassword_newpassword"
        app:layout_constraintEnd_toEndOf="@id/gd_forgotpassword_end"
        app:layout_constraintStart_toStartOf="@+id/gd_forgotpassword_start"
        app:layout_constraintTop_toBottomOf="@id/tv_forgotpassword_welcome" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_forgotpassword_newpassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/et_forgotpassword_newpassword2"
        app:layout_constraintEnd_toEndOf="@id/gd_forgotpassword_end"
        app:layout_constraintStart_toStartOf="@+id/gd_forgotpassword_start"
        app:layout_constraintTop_toBottomOf="@id/et_forgotpassword_newpassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forgotpassword_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/background_button"
        android:text="@string/btn_forgotpassword_login"
        app:layout_constraintEnd_toEndOf="@id/gd_forgotpassword_end"
        app:layout_constraintStart_toStartOf="@+id/gd_forgotpassword_start"
        app:layout_constraintTop_toBottomOf="@id/et_forgotpassword_newpassword2" />

</androidx.constraintlayout.widget.ConstraintLayout>